added word break

--- a/reset.css
+++ b/reset.css
@@ -45,6 +45,18 @@ h6 {
   font-size: 0.67rem;
 }
 
+p,
+li,
+h1,
+h2,
+h3,
+h4 {
+  /* Help prevent overflow of long words/names/URLs*/
+  word-break: break-word;
+  /* Optional, not supported for all languages */
+  hyphens: auto;
+}
+
 img,
 svg,
 video,
